Correções capa, agradecimentos, resumo, listas e metodologia

--- a/01-elementos-pre-textuais/agradecimentos.tex
+++ b/01-elementos-pre-textuais/agradecimentos.tex
@@ -8,11 +8,11 @@ Quero agradecer à minha família pela dedicação, zelo, carinho, apoio e confi
 
 Agradeço a Joicimara, por todo o incentivo e apoio. Obrigada por fazer dessa caminhada árdua, divertida e obrigada por acreditar.
 
-Agradeço a Rosinei, por me criar. Aos meus amigos, por todas as conversas e todos os momentos de apoio e de brincadeiras fúteis que me ajudaram a abstrair em momentos de tensão.
+Agradeço a Rosinei, por me criar. Aos meus amigos, por todas as conversas e todos os momentos de apoio e de brincadeiras fúteis que me ajudaram a abstrair em momentos de tensão, vocês são a minha segunda família. 
 
-Ao meu orientador Tales Argolo, pela paciência e apoio. A professora Anolan, pela ajuda e direção. A meus colegas de trabalho, em especial para minha supervisora Paula pela compreensão e apoio. Sem essas pessoas eu não teria conseguido. Muito obrigada.
+Ao meu orientador Tales Argolo, pela paciência e apoio. À professora Anolan, pela ajuda e direção. A meus colegas de trabalho, em especial para minha supervisora Paula pela compreensão e apoio. Sem essas pessoas eu não teria conseguido. Muito obrigada.
 
-À todos os meus professores do CEFET e ao Cefet, pela oportunidade de desenvolvimento acadêmico, profissional e pessoal.
+A todos os meus professores do CEFET e ao CEFET, pela oportunidade de desenvolvimento acadêmico, profissional e pessoal.
 
-Obrigada à todos.   
+Obrigada a todos.   
 \end{agradecimentos}
