--- a/01-elementos-pre-textuais/folha-aprovacao.tex
+++ b/01-elementos-pre-textuais/folha-aprovacao.tex
@@ -6,7 +6,7 @@ Avaliação do Trabalho de Conclusão de Curso
 
 \hfill \break
 \hfill \break
-\noindent Aluno: \imprimirautor
+\noindent Aluna: \imprimirautor
 
 \noindent Título do Trabalho: \imprimirtitulo
 
