--- a/01-elementos-pre-textuais/lista-simbolos.tex
+++ b/01-elementos-pre-textuais/lista-simbolos.tex
@@ -4,7 +4,7 @@
 
 \begin{simbolos}
 	\item[$R$] Raio de distância do alvo
-	\item[$\theta$] Sentido no plano cartesiano
+	\item[$\theta$] Ângulo de orientação no plano cartesiano
 	\item[$v$] Velocidade linear
 	\item[$\omega$] Velocidade angular
 	\item[($x_{a},y_{a}$)] Coordenadas do alvo no plano cartesiano
@@ -15,11 +15,11 @@
 	\item[$e_{r}$] Vetor de erro de posição
 	\item[$r_{d}$] Vetor de distância da origem do plano cartesiano ao ponto desejado
 	\item[$r_{r}$] Vetor de distância da origem do plano cartesiano ao robô
-	\item[$e_{x}$] Erro de posição no eixo x
-	\item[$e_{y}$] Erro de posição no eixo y
-	\item[$\theta_{d}$] Sentido desejado no plano cartesiano
-	\item[$\theta_{r}$] Sentido real do robô no plano cartesiano
-	\item[$e_{\theta}$] Sentido no plano cartesiano
+	\item[$e_{x}$] Erro de posição no eixo \emph{x}
+	\item[$e_{y}$] Erro de posição no eixo \emph{y}
+	\item[$\theta_{d}$] Ângulo de orientação desejado no plano cartesiano
+	\item[$\theta_{r}$] Ângulo de orientação real do robô no plano cartesiano
+	\item[$e_{\theta}$] Erro do ângulo de orientação
 	\item[$T$] Período de rotação ao redor do alvo
 	\item[$ \omega _{c} $] Velocidade angular passada para primeira malha de controle
 	\item[$ \omega _{r} $] Velocidade angular real do robô
@@ -29,6 +29,8 @@
     \item[$ \omega _{rl} $] Velocidade angular real da roda esquerda
     \item[$  e_{wr} $] Erro de velocidade angular da roda direita 
     \item[$  e_{wl} $] Erro de velocidade angular da roda esquerda
-    \item[$  pwm_{r} $] Potência da roda direita 
-    \item[$  pwm_{l} $] Potência da roda esquerda
+    \item[$  pwm_{r} $] Comando de giro da roda direita 
+    \item[$  pwm_{l} $] Comando de giro da roda esquerda
+    \item[$ R_{p} $] Raio das rodas
+    \item[$ L $] Distância entre as rodas
 \end{simbolos}
