--- a/02-elementos-textuais/introducao.tex
+++ b/02-elementos-textuais/introducao.tex
@@ -4,7 +4,7 @@
 
 \chapter{Introdução}\label{chap:introducao}
 %Posso colocar artigos que embasem esses exemplos
-Atualmente, é cada vez mais frequente a participação de robôs na nossa sociedade, desde em seguimentos da indústria, onde esses robôs vêm se mostrando uma solução tanto econômica quanto eficiente, como também em salas cirúrgicas e no nosso cotidiano, na busca de facilitar ainda mais as tarefas \cite{HCWSNX02,CMHL08}. Entretanto, existem situações em que a utilização de um único robô é uma solução um tanto quanto lenta e muitas vezes inviável. Como exemplo de uma dessas situações pode-se citar o problema de patrulhamento de fronteira \cite{CMAJJBC08} : Para proteção das fronteiras de um país, manter diversas patrulhas de policiais circundando a área se torna muitas vezes caro e ineficiente. Uma alternativa é alocar um veículo aéreo não tripulado (\emph{VANT}) vigiando essas fronteiras, entretanto, apenas um \emph{VANT} como vigia deixará uma grande área da fronteira desprotegida por um longo período de tempo. E é por isso que a aplicação de um conjunto de robôs, cooperando entre si, se mostra muitas vezes interessante.  
+Atualmente, é cada vez mais frequente a participação de robôs na nossa sociedade, desde em segmentos da indústria, onde esses robôs vêm se mostrando uma solução tanto econômica quanto eficiente, como também em salas cirúrgicas e no nosso cotidiano, na busca de facilitar ainda mais as tarefas \cite{HCWSNX02,CMHL08}. Entretanto, existem situações em que a utilização de um único robô é uma solução um tanto quanto lenta e muitas vezes inviável. Como exemplo de uma dessas situações pode-se citar o problema de patrulhamento de fronteira \cite{CMAJJBC08} : Para proteção das fronteiras de um país, manter diversas patrulhas de policiais circundando a área se torna muitas vezes caro e ineficiente. Uma alternativa é alocar um veículo aéreo não tripulado (\emph{VANT}) vigiando essas fronteiras, entretanto, apenas um \emph{VANT} como vigia deixará uma grande área da fronteira desprotegida por um longo período de tempo. E é por isso que a aplicação de um conjunto de robôs, cooperando entre si, se mostra muitas vezes interessante.  
 
 Dentro deste panorama, surge o interesse cada vez mais crescente pelo estudo, não só da robótica, mas também de um segmento mais específico da área da inteligência artificial distribuída, que é o estudo de sistemas multiagentes, que consiste em agentes autônomos que percebem a ação do ambiente e agem de acordo com a percepção da rede de agentes. Ou, segundo os autores \citeonline[p.~1]{RSDH2004}, "[...]sistemas multiagente são sistemas compostos de agentes autônomos que interagem entre si usando determinados mecanismos e protocolos". %verificar se está correto pq o texto original fala de sistemas abertos  
 
@@ -15,22 +15,23 @@ De acordo com \citeonline{SHA08} , "a robótica sempre ofereceu ao setor industr
 \section{Relevância do tema}
 \label{sec:relevancia}
 
-Hoje em dia, há tarefas que são realizadas em diversas áreas nas quais a presença ou o envolvimento direto de pessoas é algo perigoso, ou até mesmo inviável. Sendo assim, é crescente a necessidade de se estudar outros meios de acesso a essas situações de risco, sem que isso signifique um risco à vida humana. Diante dessa problemática, o estudo de estratégias de controle de robôs móveis vêm aumentando consideravelmente. Não só para problemas que colocam em risco a vida humana, mas também problemas onde a aplicação dos robôs móveis otimizaria o tempo e eficiência da resolução destes problemas. Dentre estes problemas mencionados pode-se citar \cite{GARHAS04,JTA13,MANJ09} : o patrulhamento de fronteiras, o controle de incêndio, mapeamento de áreas desconhecidas, busca de pessoas perdidas ou detecção e monitoramento de problemas em determinado alvo, dentre outros. 
+Hoje em dia, há tarefas que são realizadas em diversas áreas nas quais a presença ou o envolvimento direto de pessoas é algo perigoso, ou até mesmo inviável. Sendo assim, é crescente a necessidade de se estudar outros meios de acesso a essas situações de risco, sem que isso signifique um risco à vida humana. Diante dessa problemática, o estudo de estratégias de controle de robôs móveis vêm aumentando consideravelmente. Não só para problemas que colocam em risco a vida humana, mas também problemas onde a aplicação dos robôs móveis otimizaria o tempo e eficiência da resolução destes problemas. Dentre estes problemas mencionados pode-se citar \cite{GARHAS04,JTA13,MANJ09}: o patrulhamento de fronteiras, o controle de incêndio, mapeamento de áreas desconhecidas, busca de pessoas perdidas ou detecção e monitoramento de problemas em determinado alvo, dentre outros. 
 
 Como é possível perceber são inúmeras as possibilidades de aplicação dos robôs móveis. Entretanto, devido muitas vezes à urgência e/ou à extensão da cobertura do problema é necessário modular o mesmo e redistribuí-lo entre um sistema multiagente de robôs móveis. Sendo assim, surge aí mais uma demanda por estudos relativos a estratégias de controle de sistemas multiagente constituídos de robôs móveis. 
 Um dos desafios destes sistemas multiagentes não é só o controle de cada agente por si só, mas também como a frota irá se comportar como um todo, para viabilizar a resolução do problema e/ou também maximizar a eficiência na resolução do mesmo. É necessário que se garanta que os robôs não colidam entre si, e trabalhem em um sistema cooperativo de fato, e não atuando individualmente, %reformular - qro dizer que um robô não pode agir exatamente igual o outro, eles tem que agir de acordo com a frota,por exemplo dada uma frota que quer mapear uma estrutura não seria "lucrativo" (não é esta a palavra) que todos os robôs partissem do mesmo ponto e fossem pelo mesmo caminho (isso apenas um robô faz). O ideal é que cada um vá por um lado da estrutura
 anulando a vantagem da frota, como se essa fosse constituída de apenas um robô. 
 
-Outra questão importante, que inclusive é o foco do tema deste trabalho, é a tolerância a falhas do sistema, isto é, como o sistema irá se comportar, se reestruturar e reorganizar diante da perda de um ou mais robôs, visto que além de ser um ambiente hostil (muitas vezes desconhecido ou até dinâmico), existem outros fatores críticos, dentre eles: falha de comunicação, ou desligamento de um dos agentes devido ao esgotamento de bateria.
+Outra questão importante, que inclusive é um dos objetivos secundários deste trabalho, é a tolerância a falhas do sistema, isto é, como o sistema irá se comportar, se reestruturar e reorganizar diante da perda de um ou mais robôs, visto que além de ser um ambiente hostil (muitas vezes desconhecido ou até dinâmico), existem outros fatores críticos, dentre eles: falha de comunicação, ou desligamento de um dos agentes devido ao esgotamento de bateria.
 
 \section{Objetivos}
 \label{sec:objetivos}
 
-Este trabalho tem como objetivo o estudo de estratégias de controle de formação de uma frota de robôs e seu comportamento em relação à sua estrutura e ao problema, ao se deparar com falhas de um ou mais robôs, bem como a implementação deste sistema multiagente em uma plataforma experimental.%de baixo custo, visando, talvez, a melhor exploração do tema em um meio acadêmico. Outro objetivo é verificar como essa frota se comporta em relação a sua estrutura e ao problema, ao se deparar com falhas de um ou mais agentes.
+%Este trabalho tem como objetivo o estudo de estratégias de controle de formação de uma frota de robôs e seu comportamento em relação à sua estrutura e ao problema, ao se deparar com falhas de um ou mais robôs, bem como a implementação deste sistema multiagente em uma plataforma experimental.
+Este trabalho tem como objetivo o estudo de estratégias de controle de formação de uma frota de robôs. Tendo como objetivo secundário o comportamento do sistema em relação à sua estrutura e ao problema, ao se deparar com a falha de um ou mais robôs. Assim como, a implementação deste sistema multiagente em uma plataforma experimental.
 
 \section{Definição do Problema}
 \label{sec:defProb}
-Visando cumprir esse objetivo, definiu-se dois problemas. O primeiro e mais simples, consiste na coordenação de uma frota de robôs para que a mesma se alinhe paralelamente e sigam em linha reta, como em problemas de varreduras de área em paralelo. E o segundo, consiste em um controle de uma frota de \emph{N} robôs, para que a mesma localize um dado alvo no espaço e o circunde a uma distância \emph{R} e em um período \emph{T}, que se reajustará conforme o tamanho da frota.  
+Visando cumprir esse objetivo, definiram-se dois problemas. O primeiro, consiste na coordenação de uma frota de robôs para que a mesma se alinhe paralelamente e eles sigam em linha reta, como em problemas de varreduras de área em paralelo. E o segundo, consiste em um controle de uma frota de \emph{N} robôs, para que a mesma localize um dado alvo no espaço e o circunde a uma distância \emph{R} e em um período \emph{T}, que se reajustará conforme o tamanho da frota.  
 
 \section{Infraestrutura Necessária}
 \label{sec:infra}
@@ -38,4 +39,4 @@ Visando cumprir esse objetivo, definiu-se dois problemas. O primeiro e mais simp
 %importante colocar aqui o motivo de se utilizar o LEGO: disponível no laboratório
 %Antes correção Anolan: Para a realização deste trabalho pretende-se utilizar dois ou mais kits da plataforma da LEGO: Lego Mindstorms. Que consiste em um NXT microcomputador de 32 bits, três motores, alguns sensores e peças de lego para montar a estrutura do robô. Além disto também será utilizado  o computador com alguns softwares, entre eles o MATLAB.
 
-Para a realização deste trabalho foram utilizados três kits da plataforma da \emph{LEGO\textregistered}: \emph{Lego Mindstorms\textregistered}, disponível do DECOM (Departamento de Computação do Centro Federal Tecnológico de Minas Gerais). Cada kit consiste em um microcomputador NXT de 32 bits, três motores, alguns sensores e peças de lego para montagem da estrutura do robô. Além disto, também será utilizado  um computador pessoal, com a seguinte configuração: processador \emph{intel core i7}, 8GB de memória \emph{RAM}, 1GB de mémória dedicada e 14", com o \emph{software MATLAB\textregistered} e a \emph{IDE Bricx Command Center} \cite{sorceforge2001} que é uma plataforma de desenvolvimento para robôs \emph{Lego Mindstorms\textregistered} que permite utilizar a linguagem \emph{NXC (Not eXactly C)} para programar os robôs.
+Para a realização deste trabalho foram utilizados dois kits da plataforma da \emph{LEGO\textregistered}: \emph{Lego Mindstorms\textregistered}, disponível do DECOM (Departamento de Computação do Centro Federal Tecnológico de Minas Gerais). Cada kit consiste em um microcomputador NXT de 32 bits, três motores, alguns sensores e peças de lego para montagem da estrutura do robô. Além disto, também será utilizado  um computador pessoal, com a seguinte configuração: processador \emph{intel core i7}, 8GB de memória \emph{RAM}, 1GB de mémória dedicada e 14", com o \emph{software MATLAB\textregistered} e a \emph{IDE Bricx Command Center} \cite{sorceforge2001} que é uma plataforma de desenvolvimento para robôs \emph{Lego Mindstorms\textregistered} que permite utilizar a linguagem \emph{NXC (Not eXactly C)} para programar os robôs.
