--- a/main.tex
+++ b/main.tex
@@ -89,7 +89,7 @@
     \include{./01-elementos-pre-textuais/agradecimentos}    % Agradecimentos
     \include{./01-elementos-pre-textuais/epigrafe}          % Epígrafe
     \include{./01-elementos-pre-textuais/resumo-pt}         % Resumo na língua vernácula
-    \include{./01-elementos-pre-textuais/resumo-en}         % Resumo em língua estrangeira
+    %\include{./01-elementos-pre-textuais/resumo-en}         % Resumo em língua estrangeira
     \include{./01-elementos-pre-textuais/lista-figuras}     % Lista de figuras
     \include{./01-elementos-pre-textuais/lista-tabelas}     % Lista de tabelas
     %\include{./01-elementos-pre-textuais/lista-quadros}     % Lista de quadros
