--- a/02-elementos-textuais/resultados.tex
+++ b/02-elementos-textuais/resultados.tex
@@ -1,7 +1,9 @@
 \chapter{Resultados }
 \label{chap:resultados}
 
-Após feitos todas as simulações e testes, foram aplicadas as estratégias para resolução de ambos os problemas em uma frota de dois robôs. Para a resolução do primeiro problema , utilizou-se somente o controlador polinomial na malha interna e foi adotado a \autoref{eq:velP1} para estabelecer a velocidade desejada a ser aplicada nos motores. No mais, as informações trocadas entre as malhas externas foi apenas a posição dos robôs. Como pode-se observar na \autoref{fig:sP12}, a estratégia utilizada é suficientemente adequada para resolução do problema. Além disso, é possível notar que devido a imprecisão dos controladores, tem-se um pequeno deslocamento lateral em ambos os robôs que é de $\pm 2$ centímetros a cada metro deslocado que é aceitável.
+Após a realização de todas as simulações e testes, foram aplicadas as estratégias para resolução de ambos os problemas em uma frota de dois robôs reais. Para a resolução do primeiro problema , utilizou-se somente o controlador polinomial na malha interna e foi adotado a \autoref{eq:velP1} para estabelecer a velocidade desejada a ser aplicada nos motores. No mais, as informações trocadas entre as malhas externas foi apenas a posição dos robôs. 
+
+Como pode-se observar na Figura \ref{fig:sP12} e \ref{fig:P12Erro}, a estratégia utilizada é suficientemente adequada para resolução do problema. Na \autoref{fig:P12Erro}, é mostrado o erro do sistema convergindo para zero, ou seja, a distância entre os robôs reduzindo conforme eles se aproximam, já na \autoref{fig:P12Ini}, mostra a trajetória feita pelos robôs que seguem da direita para a esquerda. Além disso, é possível notar que devido a imprecisão dos controladores, tem-se um pequeno deslocamento lateral em ambos os robôs que é de aproximadamente $2$ centímetros a cada metro deslocado, o que é aceitável.
 
 \begin{figure}[!htb]
 	\centering
@@ -30,9 +32,10 @@ Após feitos todas as simulações e testes, foram aplicadas as estratégias par
 
 O segundo problema consiste em fazer uma frota de \emph{N} robôs localizar e circundar um alvo a uma distância \emph{R} e em um determinado período \emph{T}, que deve variar de acordo com o tamanho da frota e os robôs devem ter a mesma distância entre eles. Após realizados todos os testes e simulações, aplicou-se a estratégia em uma frota de dois robôs, colocando-os a mesma distância do alvo e em sentidos opostos, de maneira que eles não se colidissem quando o sistema ainda não estivesse estável. 
 
-Como pode ser visto na \autoref{eq:posDesejada_p2}, o cálculo da posição desejada para o segundo problema depende do tempo, devido a falta de sincronismo entre os relógios dos robôs, a posição desejada calculada pelos robôs podem apresentar erros na formação da  estrutura. Para contornar este problema, a solução encontrada foi passar para o outro robô, o tempo do mestre. Desta forma, elimina-se o problema da falta de sincronismo entre os relógios. 
+Como pode ser visto na \autoref{eq:posDesejada_p2}, o cálculo da posição desejada para o segundo problema depende do tempo, devido a falta de sincronismo entre os relógios dos robôs, a posição desejada calculada pelos robôs pode apresentar erros na distribuição circular balanceada. Para contornar este problema, a solução encontrada foi passar para o outro robô o tempo do mestre. Desta forma, elimina-se o problema da falta de sincronismo entre os relógios. 
 
-Como pode ser visto na \autoref{fig:P2}, a estratégia se mostrou plausível, visto que ambos os robôs convergiram para o alvo, contornando-o a uma distância de aproximadamente 30 centímetros, se mantiveram equidistantes e após retirar um dos robôs, o período \emph{T} foi reduzido pela metade, cobrindo melhor a fronteira. Para a realização deste experimento foi utilizado o controlador da malha interna polinomial e o controlador proporcional da malha intermediária de ganho 2.
+Como pode ser visto na \autoref{fig:P2}, a estratégia se mostrou plausível, visto que ambos os robôs convergiram para o alvo, contornando-o a uma distância de aproximadamente 30 centímetros, se mantiveram equidistantes e após a retirada de um dos robôs, %o período \emph{T} foi reduzido pela metade, 
+dobrou-se o $\omega$ do robô, cobrindo melhor a fronteira. Para a realização deste experimento foi utilizado o controlador da malha interna polinomial e o controlador proporcional da malha intermediária de ganho 2.
 
    \begin{figure}[!htb]
    	\centering
